<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="" >

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings3" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="stream_audio"
            android:summary="@string/settings4"
            android:title="@string/settings3" />

        <ListPreference
            android:entries="@array/audioEncoderArray"
            android:entryValues="@array/audioEncoderValues"
            android:key="audio_encoder"
            android:defaultValue="5"
            android:summary="@string/settings6"
            android:title="@string/settings5" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings7">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="stream_video"
            android:summary="@string/settings8"
            android:title="@string/settings7" />

        <ListPreference
            android:entries="@array/videoEncoderArray"
            android:entryValues="@array/videoEncoderValues"
            android:key="video_encoder"
            android:defaultValue="1"
            android:summary="@string/settings10"
            android:title="@string/settings9" />
        <ListPreference
            android:entries="@array/videoResolutionArray"
            android:entryValues="@array/videoResolutionArray"
            android:key="video_resolution"
            android:defaultValue="1280x720"
            android:title="@string/settings11" />
        <ListPreference
            android:entries="@array/videoFramerateArray"
            android:entryValues="@array/videoFramerateValues"
            android:key="video_framerate"
            android:defaultValue="30"
            android:title="@string/settings12" />
        <ListPreference
            android:entries="@array/videoBitrateArray"
            android:defaultValue="2000"
            android:entryValues="@array/videoBitrateValues"
            android:key="video_bitrate"
            android:title="@string/settings13" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings28" >
        <EditTextPreference
            android:defaultValue="krystianoos"
            android:inputType="text"
            android:key="username"
            android:summary="Wpisz nazwę użytkownika"
            android:title="Nazwa użytkownika" />
        <EditTextPreference
            android:defaultValue="password"
            android:inputType="textVisiblePassword"
            android:key="password"
            android:summary="Wpisz hasło"
            android:title="Hasło" />
        <EditTextPreference
            android:defaultValue="rtsp://192.168.0.220:1935/live/adaptStreaming"
            android:inputType="textUri"
            android:key="rtsp_address"
            android:summary="Wpisz adres serwera"
            android:title="Adres serwera" />
    </PreferenceCategory>


</PreferenceScreen>